fix: align Gradle plugin dependencies with resolved coordinates